# TriSafe-RAG

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: api.py  streamlit_app.py
configs/: ablations.yaml  experiment_v1.yaml
data/evaluation/: seed_eval.json
paper/: abstract_v1.md  gap_statement.md  objectives.md
src/: __init__.py  build.py  cli.py  pipeline.py
src/audit/: __init__.py  logger.py
src/eval/: __init__.py  metrics.py  runner.py
src/generation/: __init__.py  generator.py  llm.py  prompts.py
src/ingestion/: __init__.py  chunker.py  loaders.py  normalize.py
src/retrieval/: __init__.py  bm25.py  embeddings.py  hybrid.py  vector_store.py
src/trust/: __init__.py  abstention.py  calibration.py  fairness.py  grounding.py
tests/: test_components.py  test_pipeline.py
