[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "trisafe-rag"
version = "0.1.0"
description = "A Tri-Layer Safety-Aware Retrieval-Augmented Generation Framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "All Rights Reserved" }
authors = [
    { name = "TriSafe-RAG Research Group" }
]
keywords = ["RAG", "LLM", "hallucination-detection", "safety", "NLP", "ICTer2026"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/<your-org>/TriSafe-RAG"
Issues = "https://github.com/<your-org>/TriSafe-RAG/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=src --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
