[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trisafe-rag"
version = "0.2.0"
description = "Trustworthy multilingual retrieval-augmented generation for public-service AI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [ { name = "TriSafe-RAG Research Group" } ]
keywords = ["rag","multilingual","trustworthy-ai","fairness","abstention","grounding","sinhala","tamil"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.26", "pyyaml>=6.0", "pydantic>=2.5"]

[project.optional-dependencies]
neural = ["sentence-transformers>=2.7", "transformers>=4.40", "torch>=2.2"]
app = ["fastapi>=0.110", "uvicorn>=0.29", "streamlit>=1.32"]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "black>=24.0", "ruff>=0.4"]
loaders = ["beautifulsoup4>=4.12", "pypdf>=4.0"]

[project.urls]
Repository = "https://github.com/Vidura-Wijekoon/TriSafe-RAG"
Issues = "https://github.com/Vidura-Wijekoon/TriSafe-RAG/issues"

[project.scripts]
trirag = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"
